samples/_failures_safe/1761789920_a91729_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f575b4f7.c: In function ‘main’:
./samples/SAFE/__tmp_f575b4f7.c:158:17: error: expected declaration or statement at end of input
  158 |                 } else if (status == 0) {
      |                 ^
./samples/SAFE/__tmp_f575b4f7.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f575b4f7.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f575b4f7.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f575b4f7.c:158:17: error: expected declaration or statement at end of input
